--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "project-cli",
   "version": "1.0.0",
   "description": "cli for getting weather",
-  "main": "index.js",
-  "bin": "index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +16,8 @@
     "weather"
   ],
   "author": "Bakshayn Artavazd",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.2.1"
+  }
 }
