--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Bakshayn Artavazd",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "chalk": "^5.2.0",
+    "dedent": "^0.7.0"
   }
 }
